tdf#112535 DOC import: fix handling the have contour but no polygon case

In case a graphic has contour enabled, but there is no wrap polygon,
that means auto-contour in Writer, and no contour in Word, so handle
this difference during DOC import.

Regarding the DOCX import -> DOC export -> DOC import scenario, this
fixes a regression from commit 628a0f313ed05db0149db680837c99267a77ea3c
(DOCX drawingML import: handle SurroundContour shape property,
2014-08-11), though the DOC import part was always broken, I think.

(cherry picked from commit 90928f23994d8fc1d9cc7edf95880782c8ca712a)

Change-Id: I6049fcf5df20736b702de901aef7068826d43f18
Reviewed-on: https://gerrit.libreoffice.org/76579
Tested-by: Jenkins
Reviewed-by: Xisco Faulí <xiscofauli@libreoffice.org>