sw/CppunitTest_sw_ww8import.mk
@@ -25,6 +25,7 @@ $(eval $(call gb_CppunitTest_use_libraries,sw_ww8import, \
     unotest \
     vcl \
     sfx \
+    svl \
     sw \
 	utl \
 ))
